3.1.1
  [Jörg Frings-Fürst]
    * Add footer text after callback calendar:
      - Update: www/agc/vicidial.php.
      - New: www/agc/callback_footer.php.sample.
    * Change length of Campaign ID to 20:
      - Update: www/vicidial/admin.php,
          extras/mysql_create_table_since_3.0.1.sql.
      - New: update_db_since_3.0.1.sql.
      
3.0.2
  [Jörg Frings-Fürst]
    * Replace alt_phone_search with a checkbox:
      - Update: www/vicidial/admin_search_lead.php.

3.0.1
  [Danny Funkat]
    * Add Pause code into AGENTSview:
      - Update www/agc/vdc_db_query.php.
  [Jörg Frings-Fürst]
    * Add upstream Rev. 3079:
      - Update: www/vicidial/admin.php,
          www/vicidial/help_documentation.txt: Some Typos.
    * Add upstream Rev. 3080:
      - Update: www/agc/vdc_db_query.php: Fix for issue with wrong script
          background with list-script-override on outbound autodial calls.
    * Add upstream Rev. 3081:
      - Update docs/NON-AGENT_API.txt,
          www/vicidial/non_agent_api.php: Added agent_campaigns function.
    * Add upstream Rev. 3082:
      - Update: UPGRADE,
          agi/VD_amd.agi,
          bin/ADMIN_archive_log_tables.pl,
          extras/MySQL_AST_CREATE_tables.sql,
          extras/upgrade_2.14.sql
      - New: bin/AST_activity_log_export.pl,
          extras/ast13_amd_noaudio.patch,
          extras/mysql_update/mysql-1567.sql: Added more logging options.
    * Add upstream Rev. 3083:
      - Update: www/vicidial/admin.php,
          www/vicidial/help_documentation.txt: Added READ_ONLY settings
            container type.
    * Add upstream Rev. 3084:
      - Update: bin/AST_activity_log_export.pl: Added agent_log_id to
          vicidial_agent_log export.
    * Add upstream Rev. 3085:
      - Update: UPGRADE,
          www/vicidial/admin.php,
          www/vicidial/admin_modify_lead.php: Added AMD Log Report, Added
          display of AMD log info when CIDdisplay=Yes is set.
      - New: www/vicidial/AST_AMD_log_report.php.